--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -64,3 +64,12 @@ linters-settings:
     exclude-functions:
       - (*go.uber.org/zap.Logger).Sync
 
+  gci:
+    custom-order: true
+    sections:
+      - standard # Standard section: captures all standard packages.
+      - default # Default section: contains all imports that could not be matched to another section type.
+      - prefix(github.com/jurelou/forensibus)
+      - blank # Blank section: contains all blank imports. This section is not present unless explicitly enabled.
+      - dot # Dot section: contains all dot imports. This section is not present unless explicitly enabled.
+    
