--- a/docker/splunk/app/default/props.conf
+++ b/docker/splunk/app/default/props.conf
@@ -2,7 +2,22 @@
 # Common artifacts
 
 [forensibus/json]
-INDEXED_EXTRACTIONS = JSON
-SHOULD_LINEMERGE = true
-LINE_BREAKER = ([\r\n]+)
-KV_MODE = none
+TRANSFORMS-001_rewrite_sourcetype = setSourcetype
+
+# [evtx]
+# INDEXED_EXTRACTIONS = JSON
+# SHOULD_LINEMERGE = true
+# LINE_BREAKER = ([\r\n]+)
+# KV_MODE = json
+
+# [prefetch]
+# INDEXED_EXTRACTIONS = JSON
+# SHOULD_LINEMERGE = true
+# LINE_BREAKER = ([\r\n]+)
+# KV_MODE = json
+
+# [forensibus/json]
+
+
+# [evtx]
+# TRANSFORMS-SourceEvtx = setSourcetypeEvtx
