--- a/docker/splunk/app/default/inputs.conf
+++ b/docker/splunk/app/default/inputs.conf
@@ -1,8 +1,8 @@
 [splunktcp://9997]
-disabled = 0
+disabled=false
 
 [http]
-disabled=0
+disabled=false
 port=8088
 index=main
 enableSSL=0
@@ -12,8 +12,15 @@ maxSockets = 0
 useDeploymentServer=0
 ackIdleCleanup=true
 
-[http://forensibus]
-disabled=0
-description=HEC used by forensibus.
-token=42424242-4242-4242-4242-424242424242
-queueSize=10MB
+# [http://forensibus]
+# disabled=0
+# description=HEC used by forensibus.
+# token=42424242-4242-4242-4242-424242424242
+# queueSize=10MB
+
+[tcp://9515]
+disabled=false
+queueSize=1MB
+listenOnIPv6=no
+index=forensibus
+sourcetype=forensibus/json
