--- a/docker/splunk/app/default/transforms.conf
+++ b/docker/splunk/app/default/transforms.conf
@@ -1,5 +1,13 @@
-[windows_signature_lookup]
-filename = windows_signatures_850.csv
+# [windows_signature_lookup]
+# filename = windows_signatures_850.csv
 
-[windows_audit_changes_lookup]
-filename = windows_audit_changes_850.csv
+# [windows_audit_changes_lookup]
+# filename = windows_audit_changes_850.csv
+
+
+
+[setSourcetype]
+REGEX = .*forensibus_(\w+).*
+FORMAT = sourcetype::$1
+DEST_KEY = MetaData::Sourcetype
+
