--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Audit
+name: Test
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  audit:
+  test:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
