--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,7 +5,7 @@ outputFolder: /tmp/forensibus
 outputType: splunk
 
 splunk:
-  index: maina
+  index: main
   hec:
     address: http://localhost:8088
     token: 42424242-4242-4242-4242-424242424242
