--- a/.github/workflows/deploy-github.yml
+++ b/.github/workflows/deploy-github.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-        working-directory: ./docs
         with:
           node-version: '16'
           cache: 'npm'
+          cache-dependency-path: ./docs/package-lock.json
 
       - name: Install dependencies
         working-directory: ./docs
