--- a/docs/config/_default/config.toml
+++ b/docs/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://doks.netlify.app/"
+baseurl = "https://forensibus.netlify.app/"
 canonifyURLs = false
 disableAliases = true
 disableHugoGeneratorInject = true
