--- a/docs/theme.toml
+++ b/docs/theme.toml
@@ -1,14 +1,14 @@
-name = "Doks"
-license = "MIT"
-licenselink = "https://github.com/h-enk/doks/blob/master/LICENSE"
-description = "Hugo theme helping you build modern documentation websites that are secure, fast, and SEO-ready — by default."
+name = "Forensibus"
+license = "GNU GPL"
+licenselink = "https://github.com/jurelou/forensibus/blob/master/LICENSE"
+description = "..."
 
-homepage = "https://github.com/h-enk/doks"
-demosite = "https://doks.netlify.app"
+homepage = "https://github.com/jurelou/forensibus"
+demosite = "https://forensibus.netlify.app"
 
 tags = ["landing page", "documentation", "blog", "minimal", "modern", "customizable", "search", "dark mode", "bootstrap"]
 features = ["security aware", "fast by default", "seo-ready", "development tools", "bootstrap framework", "netlify-ready", "full text search", "page layouts", "dark mode"]
 
 [author]
-  name = "Henk Verlinde"
-  homepage = "https://henkverlinde.com"
+  name = "jurelou"
+  homepage = "https://github.com/jurelou"
